feat: scaffold resource store
